refactoring and improvements
